--- a/workshop/exercise-07/style.css
+++ b/workshop/exercise-07/style.css
@@ -1,7 +1,37 @@
 body {
   margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
 .mobile-nav-button img {
   width: 18px;
+}
+
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.desktop-nav ul {
+  list-style-type: none;
+  display: flex;
+}
+
+.desktop-nav ul li {
+  margin: 0 20px;
+}
+
+@media (max-width: 799px) {
+  .desktop-nav {
+    display: none;
+  }
+}
+
+@media (min-width: 800px) {
+  .mobile-nav {
+    display: none;
+  }
 }
