--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,67 @@
+
+h1 {
+  text-align: center;
+}
+
 h3 {
   margin-bottom: 0;
+} 
+
+table {
+  text-align: left;
+  width: 100%;
 }
+
+.facts {
+  border-spacing: 0;
+  width: 100%;
+  border-radius: 4px;
+  padding: 20px 20px;
+} 
+
+th {
+  text-align: left;
+  padding: 10px 10px;
+}
+
+td {
+  text-align: left;
+  padding: 10px 10px;
+}
+
+tr:nth-child(even) {
+  background-color: grey;
+}
+
+/* Using Flexbox */
+.links {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+}
+
+/* LINK SQUARES MADE HERE
+WHAT IS BORDER BOX */
+.links a {
+  text-decoration: none;
+  color: #fff;
+  background-color: dodgerblue;
+  padding: 20px;
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  width: 100%;
+} 
+
+li {
+  list-style-type: none;
+  flex: 1;
+  margin-right: 20px;
+} 
+
+.links > li:last-child {
+  margin-right: 0px;
+}
+
+
+
