--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -2,12 +2,56 @@ body {
     margin: 0;
 }
 
+nav {
+    display: none;
+    color: white;
+    position: absolute;
+    background-color: blue;
+    top: 50px;
+}
+
 .nav {
     background-color: #383737;
+    display: flex;
+    align-items: stretch;
+    height: 50px;
 }
 
 .nav-dropdown {
     color: #fff;
     text-decoration: none;
-    display: inline-block;
+    display: flex;
+    align-items: center;
 }
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+}
+
+nav ul li {
+    padding: 15px;
+}
+
+nav ul li:hover {
+    background: skyblue;
+}
+
+.nav-dropdown:hover>nav {
+    display: block;
+}
+
+/*
+position
+top
+left
+display
+margin
+list-style-type
+padding
+background-color
+:hover
+*/
