--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,46 +4,98 @@ body {
 }
 
 .header {
-
+    background: blue;
+    color: white;
+    text-align: center;
+    padding: 25px;
+    box-shadow: 3px 3px 3px 2px grey;
 }
 
 .registration-form {
-
+    box-shadow: 3px 3px 3px 2px grey;
+    margin: 100px;
+    max-width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 20px;
 }
 
 .text-field {
-
+    border-radius: 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .radio-label,
 .checkbox-label {
-
+    text-align: left;
+    margin: 10px;
+    margin-left: 0;
 }
 
 label {
-
+    text-align: center;
+    display: block;
 }
 
 .section {
-
+    border-top: 1px solid grey;
+    padding: 10px 0;
 }
 
-.section > label {
-
+.section>label {
+    text-align: left;
 }
 
 select {
-
+    margin-left: 10px;
 }
 
 textarea {
-
+    display: block;
+    width: 90%;
+    height: 100px;
+    color: black;
+    background-color: lightgrey;
+    margin: 10px auto;
 }
 
 .form-button {
-
+    border: 1px solid blue;
+    width: 150px;
+    height: 50px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .form-button:hover {
-    
+    background-color: royalblue;
+    color: white;
 }
+
+
+/* 
+box-shadow
+margin-bottom
+border-radius
+max-width
+box-sizing
+border-top
+text-align
+margin-left
+width
+min-height
+margin-top
+padding
+font-size
+border
+margin
+display
+cursor
+transition
+background-color
+color
+:hover
+*/
