--- a/workshop/exercise-07/style.css
+++ b/workshop/exercise-07/style.css
@@ -5,3 +5,36 @@ body {
 .mobile-nav-button img {
   width: 18px;
 }
+header{
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+
+.desktop-nav ul{
+   list-style: none;
+   display: flex;
+}
+
+.desktop-nav ul li{
+  margin: 0 20px;
+}
+
+.desktop-nav ul li:last-of-type{
+  margin-right: 0;
+}
+
+@media (min-width: 600px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+@media (max-width: 800px) {
+  .desktop-nav {
+    display: none;
+  }
+}
+
