--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,46 +4,82 @@ body {
 }
 
 .header {
-
+  text-align: center;
+  padding: 40px;
+  color:white;
+  margine:0;
+  background-color: cornflowerblue;
+  box-shadow: 0 6px 8px 4px #ddd;
 }
 
 .registration-form {
-
+  padding: 25px;
+  max-width: 100%;
+  margin: auto;
+  background-color: cornsilk;
+  border-radius: 10px;
+  margin-top: auto;
+  margin-bottom: auto;
 }
 
 .text-field {
-
+   padding: 10px;
+   border-radius: 5px;
+   border:0.5px solid darkcyan;
+   margin: 15px auto;
+   display: block;
+   box-sizing: border-box;
+   max-width: 200px;
+   width: 100%;
 }
 
 .radio-label,
 .checkbox-label {
-
+text-align: left;
+margin: 10px;
+margin-left: 0;
 }
 
 label {
-
+  font-size: 1rem;
+  display: block;
+  text-align: center;
 }
 
 .section {
-
+  border-top: 1px solid white;
+  padding: 10px 0;
 }
 
 .section > label {
-
+text-align: left;
 }
 
 select {
-
+  font-size: 1rem;
+  margin-left: 10px;
 }
 
 textarea {
-
+  display: flex;
+  width: 100%;
+  background-color: whitesmoke;
+  border: 0;
+  font-size: 1rem;
+  min-height: 100px;
+  margin-top: 10px;
 }
 
 .form-button {
-
+  padding: 10px 30px;
+  font-size: 1rem;
+  border:1px solid lightgreen;
+  margin: 10px auto;
+  display: block;
+  cursor: pointer;
+  transition: background-color 0.5s ease-in-out;
 }
 
 .form-button:hover {
-    
+    background-color: powderblue;
 }
