--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,51 @@
+.header {
+  text-align: center;
+}
+
+.facts{
+  border-spacing: 0;
+  width: 100%;
+  border-radius: 10px;
+  border: 1px solid #ddd;
+  padding: 10px;
+}
+
+
+th{
+text-align: left;
+}
+
+td,
+th {
+  padding: 10px;
+} 
 h3 {
   margin-bottom: 0;
+}
+
+.links {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.links > li {
+  list-style-type: none;
+  flex: 1;
+  margin-right: 20px;
+}
+
+.links > li:last-child {
+  margin-right: 0;
+}
+
+.links a {
+text-decoration: none;
+color: white;
+padding: 30px;
+background-color:royalblue;
+display: inline-block;
+box-sizing: border-box;
+text-align: center;
+width: 100%;
 }
