--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -7,7 +7,35 @@ body {
 }
 
 .nav-dropdown {
+    padding: 25px;
     color: #fff;
     text-decoration: none;
+    position:relative;
     display: inline-block;
+}
+
+.menu {
+    display: none;
+}
+
+.nav-dropdown:hover > .menu {
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #03a9f4;
+}
+
+.list > li:hover {
+    background-color: dodgerblue;
+}
+
+.list {
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    list-style-type: none;
+    padding: 25px;
 }
