--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,31 +4,51 @@ body {
 }
 
 .header {
-
+    padding: 20px 0 20px 0;
+    text-align: center;
+    justify-content: center;
+    color: white;
+    background-color: #2196f3;
+    box-shadow: 0px 4px 6px 2px lightgray; 
 }
 
 .registration-form {
+    margin: 50px auto 30px auto;
+    width: 85%;
+    box-shadow: 0px 4px 6px 2px lightgray; 
 
 }
 
 .text-field {
+    margin: 10px auto;
+    display: block;
+    width: 400px;
+    height: 40px;
+    border: solid 1px #2196f3;
+    border-radius: 5px;
 
 }
 
 .radio-label,
 .checkbox-label {
-
+    text-align: left;
+    margin: 10px;
 }
 
 label {
-
+    margin: 10px;
+    display: block;
+    text-align: center;
 }
 
 .section {
+    border-top:solid 1px lightgrey;
 
 }
 
 .section > label {
+    text-align: left;
+    display: block;
 
 }
 
@@ -37,13 +57,23 @@ select {
 }
 
 textarea {
+    display: block;
+    background-color: #f5f5f5;
+    border: none;
+    width: 100%;
 
 }
 
 .form-button {
+    display: block;
+    margin: 20px auto;
+    border: solid 1px #0096fb;
+    padding: 20px 40px;
 
 }
 
 .form-button:hover {
-    
+    color: white;
+    background-color: #0096fb;
+
 }
