--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,68 @@
+body {
+  margin: 0;
+}
+
 h3 {
   margin-bottom: 0;
+}
+
+th {
+  text-align: left;
+  padding: 10px;
+}
+
+td {
+  padding: 10px;
+}
+
+tr:nth-child(even) {
+  background: lightgrey;
+}
+
+.header {
+  margin-top: 12px;
+  text-align: center;
+}
+
+.links {
+  display: flex;
+  list-style: none;
+  padding: 0;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: left;
+  margin: 10px;
+  padding: 0px;
+}
+
+.facts {
+  padding: 5px;
+  width: 100%;
+  border: solid 1px lightgrey;
+  border-collapse: collapse;
+}
+
+.links > li {
+  flex: 1;
+  margin: 10px;
+  background-color: dodgerblue;
+  margin-right: 20px;
+}
+
+a {
+  
+  color: white;
+  text-decoration: none;
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  padding: 20px;
+  width: 100%;
 }
